<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@mipmap/default_bg"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/faceImg"
            android:layout_marginTop="30.0px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_head" 
            android:layout_gravity="center_horizontal"/>

        <RelativeLayout
            android:id="@+id/RelativeLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="10.0px"
            android:background="@drawable/login_back"
            android:paddingBottom="10.0px"
            android:paddingTop="21.0px" >

            <EditText
                android:id="@+id/login_edit_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/edit_login"
                android:hint="@string/strInputAccHint"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_account"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignTop="@+id/login_edit_account"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strAccInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <!-- 显示以保存账号的下拉按钮 -->
            <!-- <ImageButton
                android:id="@+id/ImageButton02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_account"
                android:layout_alignRight="@+id/login_edit_account"
                android:layout_alignTop="@+id/login_edit_account"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/more_select" /> -->

            <EditText
                android:id="@+id/login_edit_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignRight="@+id/login_edit_account"
                android:layout_below="@+id/login_edit_account"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/edit_login"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/login_edit_pwd"
                android:layout_alignRight="@id/TextView01"
                android:layout_alignTop="@id/login_edit_pwd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <!-- 保存密码的复选框 -->
            <!-- <CheckBox
                android:id="@+id/login_cb_savepwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/login_edit_pwd"
                android:layout_below="@+id/login_edit_pwd"
                android:button="@drawable/btn_check"
                android:checked="true"
                android:text="@string/option_remember"
                android:textColor="#ff222222"
                android:textSize="16.0sp" /> -->
            
        </RelativeLayout>
        <Button
                android:id="@+id/btn_login"
                android:layout_width="100.0px"
                android:layout_height="30.0px"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_login"
                android:text="@string/login" />
    </LinearLayout>

</LinearLayout>