<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainweixin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#000000"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >
            </FrameLayout>

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/mainbottom"
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:background="#000"
                android:paddingTop="5dip" >

                <FrameLayout style="@style/main_tab_but_linear" >

                    <LinearLayout
                        android:id="@+id/channel3"
                        style="@style/main_tab_but_linear" >

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/shouyemain" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bottomtitle01"
                            android:textColor="#b87721"
                            android:textSize="12sp"
                            android:visibility="gone" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout style="@style/main_tab_but_linear" >

                    <LinearLayout
                        android:id="@+id/channel1"
                        style="@style/main_tab_but_linear" >

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/msg1" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bottomtitle02"
                            android:textColor="#838992"
                            android:textSize="12sp"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/infopush_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="6dip"
                        android:background="@mipmap/wode_icon_01"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="#fff"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </FrameLayout>

                <FrameLayout style="@style/main_tab_but_linear" >

                    <LinearLayout
                        android:id="@+id/channel2"
                        style="@style/main_tab_but_linear" >

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/mimetab1" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bottomtitle03"
                            android:textColor="#838992"
                            android:textSize="12sp"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/newf_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="6dip"
                        android:background="@mipmap/wode_icon_01"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="#fff"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>